--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,5 @@ repositories {
 
 dependencies {
 	compile gradleApi()  
-	compile 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+	compile 'net.minecraftforge.gradle:ForgeGradle:2.0.1'
 }
