--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ compileJava
 	options.encoding = "UTF-8"
 }
 sourceCompatibility = 1.6
-version = '1.2.0'
+version = '1.2.1'
 
 repositories {
 	mavenCentral()
@@ -24,5 +24,5 @@ repositories {
 
 dependencies {
 	compile gradleApi()  
-	compile 'net.minecraftforge.gradle:ForgeGradle:2.0.2'
+	compile 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
 }
